made designation more explicit

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <body>
         <h1> Aakash </h1>
         
-        <p> FARE Fellow <br>
+        <p> FARE Postdoctoral Fellow <br>
             Department of Computer Science and Engineering <br>
             Indian Institute of Technology Kanpur <br>
             Email: aakash0641 [a t] g mail . com <br>
         </p>
 
         <br>
-        <strong> Research Area: </strong> Multi-Robot Task and Path Planning, Cyber-Physical Systems <br>
+        <strong> Research Area: </strong> Multi-Robot Planning, Robotics and Automation, Cyber-Physical Systems <br>
         <strong> Ph.D. Thesis Title: </strong> Scalable Goal Assignment for Multi-Robot Systems <br>
         <strong> Ph.D. Thesis Advisor: </strong> <a href="https://www.cse.iitk.ac.in/users/isaha/" target="_blank"> Prof. Indranil Saha </a> <br>
         
